Fix: Use manual method discovery for DrawEquipmentAiming patch
- Add Patcher.cs with runtime method discovery
- Remove [HarmonyPatch] attribute that was causing startup errors
- Make patch more fault-tolerant with fallback FieldRef access
- Support both Matrix4x4 and Vector3/Quaternion Graphics.DrawMesh overloads

--- a/Source/GeneScaledWeapons.csproj
+++ b/Source/GeneScaledWeapons.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GeneScaledWeapons\ModInit.cs" />
+    <Compile Include="GeneScaledWeapons\Patcher.cs" />
     <Compile Include="GeneScaledWeapons\ModExt_SkipGeneWeaponScale.cs" />
     <Compile Include="GeneScaledWeapons\GeneScaleUtil.cs" />
     <Compile Include="GeneScaledWeapons\Patch_DrawEquipmentAiming.cs" />
