Patch both DrawEquipmentAiming and DrawEquipment + improved scale fallbacks
- Add Patch_DrawEquipment.cs for idle/held weapon scaling
- Update Patcher.cs to patch both methods
- Improve GetPawnScaleFactor with fallbacks:
  * VEF_CosmeticBodySize_Multiplier (primary)
  * Body graphic drawSize ratio (HAR big races)
  * BodySize stat (fallback)
- Remove blanket Rimdark blacklist (keep only explicit opt-out)
- Increase scale range from 0.5-2.5x to 0.5-3.0x for primarchs

--- a/Source/GeneScaledWeapons.csproj
+++ b/Source/GeneScaledWeapons.csproj
@@ -54,6 +54,7 @@
     <Compile Include="GeneScaledWeapons\ModExt_SkipGeneWeaponScale.cs" />
     <Compile Include="GeneScaledWeapons\GeneScaleUtil.cs" />
     <Compile Include="GeneScaledWeapons\Patch_DrawEquipmentAiming.cs" />
+    <Compile Include="GeneScaledWeapons\Patch_DrawEquipment.cs" />
   </ItemGroup>
 </Project>
 
