--- a/Source/GeneScaledWeapons.csproj
+++ b/Source/GeneScaledWeapons.csproj
@@ -52,7 +52,9 @@
     <Compile Include="GeneScaledWeapons\ModInit.cs" />
     <Compile Include="GeneScaledWeapons\Patcher.cs" />
     <Compile Include="GeneScaledWeapons\Patcher16.cs" />
+    <Compile Include="GeneScaledWeapons\PatcherEquipmentUtility.cs" />
     <Compile Include="GeneScaledWeapons\NodeScanUtil.cs" />
+    <Compile Include="GeneScaledWeapons\Patch_TRSScale.cs" />
     <Compile Include="GeneScaledWeapons\ModExt_SkipGeneWeaponScale.cs" />
     <Compile Include="GeneScaledWeapons\GeneScaleUtil.cs" />
     <Compile Include="GeneScaledWeapons\Patch_DrawEquipmentAiming.cs" />
