Reduce log noise: add centralized logger + settings, gate scans/transpiler under Verbose/Trace, keep one-line startup summary and once-only warnings

--- a/Source/GeneScaledWeapons.csproj
+++ b/Source/GeneScaledWeapons.csproj
@@ -50,6 +50,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GeneScaledWeapons\ModInit.cs" />
+    <Compile Include="GeneScaledWeapons\GSWLog.cs" />
+    <Compile Include="GeneScaledWeapons\ModSettings_GSW.cs" />
     <Compile Include="GeneScaledWeapons\Patcher.cs" />
     <Compile Include="GeneScaledWeapons\Patcher16.cs" />
     <Compile Include="GeneScaledWeapons\PatcherEquipmentUtility.cs" />
