--- a/Source/GeneScaledWeapons.csproj
+++ b/Source/GeneScaledWeapons.csproj
@@ -52,6 +52,8 @@
     <Compile Include="GeneScaledWeapons\ModInit.cs" />
     <Compile Include="GeneScaledWeapons\GSWLog.cs" />
     <Compile Include="GeneScaledWeapons\ModSettings_GSW.cs" />
+    <Compile Include="GeneScaledWeapons\GSWDefExtension.cs" />
+    <Compile Include="GeneScaledWeapons\ScaleGate.cs" />
     <Compile Include="GeneScaledWeapons\Patcher.cs" />
     <Compile Include="GeneScaledWeapons\Patcher16.cs" />
     <Compile Include="GeneScaledWeapons\PatcherEquipmentUtility.cs" />
