--- a/Source/GeneScaledWeapons.csproj
+++ b/Source/GeneScaledWeapons.csproj
@@ -54,6 +54,7 @@
     <Compile Include="GeneScaledWeapons\ModSettings_GSW.cs" />
     <Compile Include="GeneScaledWeapons\GSWDefExtension.cs" />
     <Compile Include="GeneScaledWeapons\ScaleGate.cs" />
+    <Compile Include="GeneScaledWeapons\ScaleFactor.cs" />
     <Compile Include="GeneScaledWeapons\Patcher.cs" />
     <Compile Include="GeneScaledWeapons\Patcher16.cs" />
     <Compile Include="GeneScaledWeapons\PatcherEquipmentUtility.cs" />
