--- a/Source/GeneScaledWeapons.csproj
+++ b/Source/GeneScaledWeapons.csproj
@@ -55,6 +55,9 @@
     <Compile Include="GeneScaledWeapons\GSWDefExtension.cs" />
     <Compile Include="GeneScaledWeapons\ScaleGate.cs" />
     <Compile Include="GeneScaledWeapons\ScaleFactor.cs" />
+    <Compile Include="GeneScaledWeapons\RenderCtx.cs" />
+    <Compile Include="GeneScaledWeapons\GSWGraphics.cs" />
+    <Compile Include="GeneScaledWeapons\Patches\Patch_DrawExtras.cs" />
     <Compile Include="GeneScaledWeapons\Patcher.cs" />
     <Compile Include="GeneScaledWeapons\Patcher16.cs" />
     <Compile Include="GeneScaledWeapons\PatcherEquipmentUtility.cs" />
