--- a/Source/GeneScaledWeapons.csproj
+++ b/Source/GeneScaledWeapons.csproj
@@ -57,6 +57,7 @@
     <Compile Include="GeneScaledWeapons\ScaleFactor.cs" />
     <Compile Include="GeneScaledWeapons\RenderCtx.cs" />
     <Compile Include="GeneScaledWeapons\Patches\Patch_DrawExtrasCtx.cs" />
+    <Compile Include="GeneScaledWeapons\Patches\Patch_PawnRenderer_DrawEqCtx.cs" />
     <Compile Include="GeneScaledWeapons\Patches\Patch_GenDraw_Draw.cs" />
     <Compile Include="GeneScaledWeapons\Patcher.cs" />
     <Compile Include="GeneScaledWeapons\Patcher16.cs" />
