--- a/Source/GeneScaledWeapons.csproj
+++ b/Source/GeneScaledWeapons.csproj
@@ -56,9 +56,8 @@
     <Compile Include="GeneScaledWeapons\ScaleGate.cs" />
     <Compile Include="GeneScaledWeapons\ScaleFactor.cs" />
     <Compile Include="GeneScaledWeapons\RenderCtx.cs" />
-    <Compile Include="GeneScaledWeapons\Patches\Patch_DrawExtrasCtx.cs" />
-    <Compile Include="GeneScaledWeapons\Patches\Patch_PawnRenderer_DrawEqCtx.cs" />
-    <Compile Include="GeneScaledWeapons\Patches\Patch_GenDraw_Draw.cs" />
+    <Compile Include="GeneScaledWeapons\Patching\EquipmentContextPatcher.cs" />
+    <Compile Include="GeneScaledWeapons\Patching\GenDrawPatcher.cs" />
     <Compile Include="GeneScaledWeapons\Patcher.cs" />
     <Compile Include="GeneScaledWeapons\Patcher16.cs" />
     <Compile Include="GeneScaledWeapons\PatcherEquipmentUtility.cs" />
